--- a/video.properties
+++ b/video.properties
@@ -1,2 +1,2 @@
 eureka.client.serviceUrl.defaultZone:http://localhost:2020/eureka
-video.name:Slokam Java Videos
+video.name:Slokam Java Videos for f22b batch
