--- a/video-qa.properties
+++ b/video-qa.properties
@@ -1,2 +1,2 @@
 eureka.client.serviceUrl.defaultZone:http://localhost:2020/eureka
-video.name:Slokam Java Videos for f22b,. morning batch
+video.name:Slokam Java Videos for f22b QA mode
